--- a/produtos.css
+++ b/produtos.css
@@ -54,7 +54,7 @@ header {
     
     }
     
-    nav li {
+    nav li  {
         display: inline;
         margin: 0 0 0 15px;
     }
@@ -72,7 +72,7 @@ header {
         
     }
     
-    .produtos {
+    .produtos  {
         width: 1000px;
         margin: 0 auto;
         padding: 80px 0;
@@ -80,6 +80,7 @@ header {
       
         
     }
+   
     
     .produtos li {
     display:inline-block;
@@ -92,6 +93,11 @@ header {
     padding: 30px 20px;
     box-sizing: border-box;
     border-radius: 10px;
+    }
+    .produtos li :hover {
+        border-color: aqua;
+
+
     }
     
     
